--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -2,7 +2,7 @@ name: Django CI
 
 on:
   push:
-    branches: [ "main" ]
+    ranches: [ "main" ]
   pull_request:
     branches: [ "main" ]
 
@@ -12,19 +12,16 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
-      matrix:
-        python-version: [3.7, 3.8, 3.9]
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v3
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Run Tests
-      run: |
-        python manage.py test
+    - name: Check out sources 
+      uses: actions/checkout@v3
+    - name: Prepare container
+    - run: ./scripts/prepare-container-focal.sh 
+    - name: Install BML master
+      
+       env:
+        TEST_SETTINGS: ${}
+        run: ./clone_libs.sh
+        run: ./build_bml.sh
+        run: ./build_progress.sh
