--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -18,8 +18,9 @@ jobs:
       uses: actions/checkout@v3
     - name: Prepare container
     - run: ./scripts/prepare-container-focal.sh 
-    - name: Install BML master
-      
+    - name: Clone libs
       run: ./clone_libs.sh
+    - name: Install bml
       run: ./build_bml.sh
+    - name: Install progress
       run: ./build_progress.sh
